--- a/infrastructure/view/server_hostname_view.xml
+++ b/infrastructure/view/server_hostname_view.xml
@@ -28,7 +28,19 @@
                 <field name="name"/>
                 <field name="wildcard"/>
                 <field name="domain_regex"/>
+                <field name="ssl_available"/>
              </group>
+            <notebook attrs="{'invisible':[('ssl_available','=',False)]}">
+                <page string="SSL Certificate">
+                    <field name="ssl_certificate" attrs="{'required':[('ssl_available','=',True)]}"/>
+                </page>
+                <page string="SSL Intermadiate Certificate">
+                    <field name="ssl_intermediate_certificate" attrs="{'required':[('ssl_available','=',True)]}"/>
+                </page>
+                <page string="SSL Certificate KEY">
+                    <field name="ssl_certificate_key" attrs="{'required':[('ssl_available','=',True)]}"/>
+                </page>
+            </notebook>
             </sheet>
         </form>
     </field>
@@ -44,6 +56,7 @@
             <field name="name"/>
             <field name="wildcard"/>
             <field name="domain_regex"/>
+            <field name="ssl_available"/>
         </tree>
     </field>
 </record>
