--- a/infrastructure/wizard/duplicate_db_wizard_view.xml
+++ b/infrastructure/wizard/duplicate_db_wizard_view.xml
@@ -7,13 +7,11 @@
      <field name="model">infrastructure.duplicate_db.wizard</field>
      <field name="arch" type="xml">
         <form string="Duplicate DB">
+            <h1>Rembember to reconfigure catchall on new database</h1>
             <group>
                 <field name="database_type_id"/>
                 <field name="new_db_name"/>
                 <field name="backups_enable"/>
-                <!-- <field name="change_user"/> -->
-<!--                 <field name="server_id" attrs="{'invisible':[('change_user','=',False)],'invisible':[('change_user','=',True)]}" /> -->
-                <!-- <field name="instance_id" attrs="{'invisible':[('change_user','=',False)],'required':[('change_user','=',True)]}" domain="[('server_id','=',server_id)]"/> -->
             </group>
             <footer>
                 <button name="duplicate_db" string="Duplicate" type="object" class="oe_highlight"/>
