--- a/infrastructure/view/database_type_view.xml
+++ b/infrastructure/view/database_type_view.xml
@@ -30,6 +30,7 @@
                 <field name="type"/>
                 <field name="prefix"/>
                 <field name="url_prefix"/>
+                <field name="service_type"/>
                 <field name="auto_deactivation_days"/>
                 <field name="auto_drop_days"/>
                 <field name="install_lang_id"/>
@@ -76,6 +77,7 @@
             <field name="type"/>
             <field name="prefix"/>
             <field name="url_prefix"/>
+            <field name="service_type"/>
             <field name="auto_deactivation_days"/>
             <field name="auto_drop_days"/>
             <field name="install_lang_id"/>
